# faisync-rs

./: Cargo.toml  LICENSE  README.md
src/: contig.rs  error.rs  fai.rs  fasta.rs  lib.rs  parser.rs
